# ml-inference

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  api1.py  docker-compose.cpu.prod.yaml  docker-compose.cpu.yaml  docker-compose.gpu.yaml  docker-compose.monitoring.yaml  docker-compose.test.yaml  docker-compose.yaml  locustfile.py  prometheus.yml  pyproject.toml  requirements.txt
api/: Dockerfile  Dockerfile.gpu  Dockerfile.test  api1.py  main.py  requirements.gpu.txt  requirements.test.txt  requirements.txt
api/src/: batch.bck  batch.py  batch_bck.py  drift.py  eotdl_wrapper.py  metrics.py  onnx.py  utils.bck  utils.py
api/tests/: test_auth.py
examples/: 00_api1.ipynb  00_hello_ml-inference.ipynb  00_road_segmentation.ipynb  01_eurosat.ipynb  02_road_segmentation.ipynb  03_batch.ipynb  03_batch_inference.ipynb  batch.sh  creodias.ipynb  metadata.json
examples/samples/: T31TDF_20240824T104021_RGB_10m.jp2 (1).pngf  colombia2018-sat.tif
k8s/: deployment.gpu.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  prometheus-config.yaml
